--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "url": "git+https://github.com/AmoyDreamer/secure-cache.git"
   },
   "keywords": [
-    "secure-cache"
+    "cache",
+    "memory",
+    "secure",
+    "memory cache"
   ],
   "author": "Allen Liu",
   "license": "MIT",
